--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,10 @@ button,
   padding: 1em 2em;
   display: inline-block;
   margin: .5em;
-  border: 1px solid #79d131;
-  border-radius: 2em;
-  cursor: pointer; }
+  border: 1px solid #fff;
+  border-radius: .5em;
+  cursor: pointer;
+  text-decoration: none; }
   button:hover,
   .button:hover {
     background-color: #5dac3e;
@@ -126,6 +127,15 @@ button,
       background-color: #5dac3e;
       color: #fff;
       border-color: #5dac3e; }
+  button.dark,
+  .button.dark {
+    color: #fff;
+    background-color: transparent;
+    border-color: #fff; }
+    button.dark:hover,
+    .button.dark:hover {
+      background-color: #fff;
+      color: #000; }
 
 /* Responsive Images */
 img {
@@ -224,7 +234,9 @@ body {
   justify-content: space-between; }
   .site-header h1, .site-footer h1 {
     font-family: "muli", sans-serif;
-    font-size: 1.5em; }
+    font-size: 1.5em;
+    margin: .5em 0 0 0;
+    /* to adjust baseline with nav text */ }
   .site-header a, .site-footer a {
     color: #fff;
     text-decoration: none; }
@@ -235,24 +247,43 @@ body {
   position: absolute;
   width: 100%; }
 
-/* Site Footer */
+/* SITE FOOTER */
 .site-footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-top: 6em; }
+  margin-top: 6em;
+  background-color: #000; }
 
-.site-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
+/* SITE NAVIGATION */
+.site-nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: -ms-grid;
+  display: grid;
+  place-items: center; }
+  .site-nav ul {
+    background: rgba(255, 0, 0, 0.5);
+    display: none;
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  .site-nav a {
+    display: block;
+    padding: 1em; }
+  .site-nav.active {
+    height: 100%; }
+    .site-nav.active ul {
+      display: block; }
 
-.site-nav a {
-  display: block;
-  padding: 1em; }
+/* Menu Button */
+.menu-button {
+  position: absolute;
+  top: 1em;
+  right: 2em;
+  cursor: pointer; }
 
 section {
   padding: ４em 0;
@@ -267,9 +298,47 @@ section {
   padding: 6em 1em;
   text-align: center;
   color: #fff;
-  background-image: url(https://images.unsplash.com/photo-1450262622215-e1167c339ddc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80);
+  background-color: #000;
   background-size: cover; }
   .hero p {
     margin-left: auto;
     margin-right: auto;
-    color: #08034e; }
+    color: #fff; }
+
+/* Layout section */
+@media (min-width: 768px) {
+  #layout .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  #layout .image-block {
+    width: 50%; }
+  #layout .text-block {
+    width: 50%;
+    -webkit-transform: translateX(-2em);
+    -ms-transform: translateX(-2em);
+    transform: translateX(-2em); } }
+
+/* Layout section */
+@media (min-width: 768px) {
+  .split-crossed-reversed .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .split-crossed-reversed .image-block {
+    width: 50%; }
+  .split-crossed-reversed .text-block {
+    width: 50%;
+    -webkit-transform: translateX(2em);
+    -ms-transform: translateX(2em);
+    transform: translateX(2em); } }
