--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -1,5 +1,4 @@
 /* site header and footer */
-
 .site-header, .site-footer {
     background-color: $color-accent;
     padding: 1em;
@@ -61,43 +60,36 @@
 /* Menu Button */
 .menu-button {
     position: absolute;
-    top: 1em;
+    top: 2em;
     right: 2em;
     cursor: pointer;
 }
 
  section {
-     padding: ４em 0;
+     padding: 6em 0;
      min-height: 100vh;
      display: grid;
      place-items: center;
  }
 
-
 /* Hero Sections */
-
 .hero {
     background-color: $color-hero-bg;
     padding: 6em 1em;
-    text-align: center;
     color: #fff;
-    background-color: #000;
     // background-image: url(https://images.unsplash.com/photo-1450262622215-e1167c339ddc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80  );
-    background-size: cover; //
+    //background-size: cover; 
    
-
-    p {
-        margin-left: auto;
-        margin-right: auto;
-        color:#fff;
+    h2 {
+        font-size: 4qm;
+        margin: 0;
+        //color:#fff;
     }
-
 }
 
 /* Layout section */
-#layout {
+.split-crossed-left {
     @media (min-width: $breakpoint-small) { 
-    
         .container {
             display: flex;
             align-items: center;
@@ -118,7 +110,6 @@
 /* Layout section */
 .split-crossed-reversed {
     @media (min-width: $breakpoint-small) { 
-    
         .container {
             display: flex;
             flex-direction: row-reverse;
