--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* -----------------------------------
 
 CSS Table OF CONTENTS*
@@ -281,12 +280,12 @@ body {
 /* Menu Button */
 .menu-button {
   position: absolute;
-  top: 1em;
+  top: 2em;
   right: 2em;
   cursor: pointer; }
 
 section {
-  padding: ４em 0;
+  padding: 6em 0;
   min-height: 100vh;
   display: -ms-grid;
   display: grid;
@@ -296,27 +295,23 @@ section {
 .hero {
   background-color: black;
   padding: 6em 1em;
-  text-align: center;
-  color: #fff;
-  background-color: #000;
-  background-size: cover; }
-  .hero p {
-    margin-left: auto;
-    margin-right: auto;
-    color: #fff; }
+  color: #fff; }
+  .hero h2 {
+    font-size: 4qm;
+    margin: 0; }
 
 /* Layout section */
 @media (min-width: 768px) {
-  #layout .container {
+  .split-crossed-left .container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
-  #layout .image-block {
+  .split-crossed-left .image-block {
     width: 50%; }
-  #layout .text-block {
+  .split-crossed-left .text-block {
     width: 50%;
     -webkit-transform: translateX(-2em);
     -ms-transform: translateX(-2em);
