--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -32,7 +32,7 @@
 
 /* SITE NAVIGATION */
 .site-nav {
-    position: fixed;
+    position: absolute;
     width:100%;
     top: 0;
     left: 0;
@@ -50,10 +50,13 @@
         padding: 1em;
     }
     &.active {
+        position: fixed;
         height: 100%;
+        z-index: 100;
         ul {
             display:block;
         }
+        background: red;    
     }
 }
 
@@ -63,6 +66,7 @@
     top: 2em;
     right: 2em;
     cursor: pointer;
+     
 }
 
  section {
@@ -116,7 +120,7 @@
             align-items: center;
         }
         .image-block {
-            width: 50%;
+            width: 50%; 
         }
         .text-block {
             width: 50%;
