--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* -----------------------------------
 
 CSS Table OF CONTENTS*
@@ -108,7 +109,7 @@ button,
   padding: 1em 2em;
   display: inline-block;
   margin: .5em;
-  border: 1px solid #fff;
+  border: 1px solid #79d131;
   border-radius: .5em;
   cursor: pointer;
   text-decoration: none; }
@@ -255,37 +256,85 @@ body {
   background-color: #000; }
 
 /* SITE NAVIGATION */
-.site-nav {
+.site-header .site-nav {
   position: absolute;
   width: 100%;
   top: 0;
   left: 0;
   display: -ms-grid;
   display: grid;
-  place-items: center; }
-  .site-nav ul {
-    background: rgba(255, 0, 0, 0.5);
-    display: none;
+  place-items: center;
+  -webkit-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  transition: all .4s ease; }
+  .site-header .site-nav ul {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     margin: 0;
     padding: 0;
     list-style: none; }
-  .site-nav a {
+  .site-header .site-nav li {
+    opacity: 0;
+    font-size: 2em;
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px); }
+  .site-header .site-nav a {
     display: block;
-    padding: 1em; }
-  .site-nav.active {
+    padding: .5em; }
+  .site-header .site-nav.active {
     position: fixed;
     height: 100%;
     z-index: 100;
-    background: red; }
-    .site-nav.active ul {
-      display: block; }
+    background: hotpink; }
+    .site-header .site-nav.active ul {
+      top: 50%; }
+    .site-header .site-nav.active li {
+      -webkit-transition: all .4s ease-out;
+      -o-transition: all .4s ease-out;
+      transition: all .4s ease-out;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1; }
+      .site-header .site-nav.active li:nth-child(1) {
+        -webkit-transition-delay: 0;
+        -o-transition-delay: 0;
+        transition-delay: 0; }
+      .site-header .site-nav.active li:nth-child(2) {
+        -webkit-transition-delay: .2s;
+        -o-transition-delay: .2s;
+        transition-delay: .2s; }
+      .site-header .site-nav.active li:nth-child(3) {
+        -webkit-transition-delay: .4s;
+        -o-transition-delay: .4s;
+        transition-delay: .4s; }
+      .site-header .site-nav.active li:nth-child(4) {
+        -webkit-transition-delay: .6s;
+        -o-transition-delay: .6s;
+        transition-delay: .6s; }
+
+.site-footer .site-nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none; }
+
+.site-footer .site-nav a {
+  display: block;
+  padding: 1em; }
 
 /* Menu Button */
 .menu-button {
   position: absolute;
   top: 2em;
   right: 2em;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: ２00; }
 
 section {
   padding: 6em 0;
