--- a/scss/partials/_buttons.scss
+++ b/scss/partials/_buttons.scss
@@ -10,7 +10,7 @@ button,
     padding: 1em 2em;
     display: inline-block;
     margin: .5em;
-    border: 1px solid #fff;
+    border: 1px solid $color-links;
     border-radius: .5em;
     cursor: pointer;
     text-decoration: none;
