--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
 .site-header, .site-footer {
   background-color: #d83a89;
   padding: 1em;
-  color: #fff;
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -336,6 +336,33 @@ body {
   cursor: pointer;
   z-index: ２00; }
 
+.menu-button.navicon {
+  font-size: 1.5em;
+  top: 1em;
+  right: 1em;
+  line-height: .75;
+  text-align: center;
+  width: 1em;
+  height: 1em;
+  overflow: hidden; }
+  .menu-button.navicon:before {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    content: "\2630";
+    -webkit-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0); }
+
+.active .menu-button.navicon:before {
+  content: "\2715";
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  -webkit-transition: .4s all ease-out;
+  -o-transition: .4s all ease-out;
+  transition: .4s all ease-out; }
+
 section {
   padding: 6em 0;
   min-height: 100vh;
@@ -389,3 +416,69 @@ section {
     -webkit-transform: translateX(2em);
     -ms-transform: translateX(2em);
     transform: translateX(2em); } }
+
+/* SCROLL TRIGGERED ANIMATION VIA SCROLLOUT */
+[data-scroll] {
+  -webkit-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s; }
+
+[data-scroll="in"] {
+  opacity: 1; }
+
+[data-scroll="out"] {
+  opacity: 0; }
+
+[data-scroll].split-crossed-left .image-block,
+[data-scroll].split-crossed-left .text-block {
+  -webkit-transition: 1s -webkit-transform ease-out;
+  transition: 1s -webkit-transform ease-out;
+  -o-transition: 1s transform ease-out;
+  transition: 1s transform ease-out;
+  transition: 1s transform ease-out, 1s -webkit-transform ease-out; }
+
+[data-scroll="in"].split-crossed-left .image-block {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0); }
+
+[data-scroll="in"].split-crossed-left .text-block {
+  -webkit-transform: translateX(-2em);
+  -ms-transform: translateX(-2em);
+  transform: translateX(-2em); }
+
+[data-scroll="out"].split-crossed-left .image-block {
+  -webkit-transform: translateX(2em);
+  -ms-transform: translateX(2em);
+  transform: translateX(2em); }
+
+[data-scroll].split-crossed-left .text-block {
+  -webkit-transform: translateX(-4em);
+  -ms-transform: translateX(-4em);
+  transform: translateX(-4em); }
+
+[data-scroll].split-crossed-reversed .image-block,
+[data-scroll].split-crossed-reversed .text-block {
+  -webkit-transition: 1s ease-out transform;
+  -o-transition: 1s ease-out transform;
+  transition: 1s ease-out transform; }
+
+[data-scroll="in"].split-crossed-reversed .image-block {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0); }
+
+[data-scroll="in"].split-crossed-reversed .text-block {
+  -webkit-transform: translateX(-2em);
+  -ms-transform: translateX(-2em);
+  transform: translateX(-2em); }
+
+[data-scroll="out"].split-crossed-reversed .image-block {
+  -webkit-transform: translateX(2m);
+  -ms-transform: translateX(2m);
+  transform: translateX(2m); }
+
+[data-scroll].split-crossed-reversed .text-block {
+  -webkit-transform: translateX(-4em);
+  -ms-transform: translateX(-4em);
+  transform: translateX(-4em); }
