--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,10 +10,11 @@ $color-text-body: rgba(0, 0, 0, 466);
 $color-midgray: rgba(0, 0, 0, .5);
 $color-links: rgb(121, 209, 49);
 $color-links-dark: rgb(93, 172, 62);
-$type-color-body: rgba(0, 0, 0, .5);
+$type-color-body: rgba(46, 235, 248, 0.5);
 
-$color-hero-bg: rgba(0, 0, 0, 1);
+$color-hero-bg: rgb(190, 241, 245);
 $color-accent:rgb(216, 58, 137); 
+$color-nav:white;
 
 //Breakpoints
 $breakpoint-small: 768px;
